[tool.poetry]
name = "repl_python3_PyWebsiteCrasher"
version = "0.1.0"
description = ""
authors = ["Sben05 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
